# swh-provenance

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  MANIFEST.in  README.md  compact.py  compact.sql  compare-all.py  compare-first.py  compare.py  conftest.py  contents.py  count.py  database.conf  docker-compose.yml  draw-content.py  draw-origin.py  dump.py  find-blob.py  histogram.py  iterator.py  metrics.py  model.py  mypy.ini  origin.py  origin.sql  origins.py  origins.sql  pyproject.toml  pytest.ini  requirements-luigi.txt  requirements-swh.txt  requirements-test.txt  requirements.txt  revisions.py  revisions_format.py  revisions_pick.py  revisions_sort.py  (+4 more)
db-build/: Cargo.toml
db-build/src/: contents_in_directories.rs  contents_in_revisions.rs  directories_in_revisions.rs  earliest_revision.rs  filters.rs  frontier.rs  frontier_set.rs  lib.rs  node_dataset.rs  revisions_in_origins.rs
db-build/tests/: earliest_revision.rs  frontier.rs
docker/data/: origins.csv
docker/origin_client/: config.yml  entrypoint.sh
docker/origin_server/: config.yml  entrypoint.sh
docker/storage/: config.yml  entrypoint.sh
docs/: design.rst  grpc-api.rst  index.rst
docs/storage/: remote.rst
origins/: server.py
proto/: swhprovenance.proto
revisions/: client.py  server.py
rust/: Cargo.toml  README.md
rust/proto/: swhprovenance.proto
rust/src/: lib.rs  main.rs  queries.rs
rust/src/database/: caching_parquet_format.rs  caching_parquet_reader.rs  metrics.rs  mod.rs  parquet.rs  pooled_reader.rs  reader.rs  table.rs  transaction.rs  types.rs
rust/src/grpc_server/: mod.rs
rust/src/test_databases/: dangling_content.rs  main.rs  mod.rs
sql/upgrades/: 002.sql  003.sql
swh/graph/tests/: test_luigi.py
swh/provenance/: __init__.py  archive.py  backend.py  cli.py  db_utils.py  directory.py  graph.py  grpc_client.py  grpc_server.py  interface.py  journal_client.py  luigi.py  model.py  origin.py  provenance.gr.py  provenance.py  pytest_plugin.py  revision.py  revisited.gr.py  revisited.py  util.py  utils.py
swh/provenance/algos/: directory.py  isochrone_graph.py  origin.py  revision.py
swh/provenance/api/: client.py  serializers.py  server.py
swh/provenance/archive/: __init__.py  interface.py  multiplexer.py  postgresql.py  storage.py  swhgraph.py
swh/provenance/backend/: graph.py  postgresql.py
swh/provenance/db/: provenance.sql
swh/provenance/grpc/: swhprovenance.proto  swhprovenance_pb2.py  swhprovenance_pb2.pyi  swhprovenance_pb2_grpc.py
swh/provenance/mongo/: README.md  backend.py
swh/provenance/multiplexer/: archive.py
swh/provenance/postgresql/: archive.py  db_utils.py  provenance.py  provenance.sql  provenancedb.py  provenancedb_base.py  provenancedb_with_path.py  provenancedb_without_path.py
swh/provenance/postgresql_nopath/: provenance.py  provenance.sql
swh/provenance/sql/: 10-superuser-init.sql  15-flavor.sql  30-schema.sql  35-schema-with-path-flavor.sql  35-schema-without-path-flavor.sql  40-funcs.sql  60-indexes-with-path-flavor.sql  60-indexes-without-path-flavor.sql  60-indexes.sql
swh/provenance/sql/upgrades/: 004.sql  005.sql  006-step2.sql  006.sql
swh/provenance/storage/: __init__.py  archive.py  backfill.py  interface.py  journal.py  postgresql.py  replay.py
swh/provenance/storage/rabbitmq/: client.py  serializers.py  server.py
swh/provenance/swhgraph/: archive.py
swh/provenance/tests/: conftest.py  generate_CMDBTS_dataset.py  provenance_tests.py  test_archive_interface.py  test_cli.py  test_conflict_resolution.py  test_conftest.py  test_consistency.py  test_directory_flatten.py  test_directory_iterator.py  test_grpc.py  test_grpc_client.py  test_grpc_client_dangling_content.py  test_history_graph.py  test_init.py  test_isochrone_graph.py  test_journal_client.py  test_luigi.py  test_origin_iterator.py  test_origin_revision_layer.py  test_provenance.py  test_provenance_db.py  test_provenance_db_storage.py  test_provenance_graph.py  test_provenance_heuristics.py  test_provenance_journal_writer.py  test_provenance_journal_writer_kafka.py  test_provenance_remote.py  test_provenance_storage.py  test_provenance_storage_denormalized.py  test_provenance_storage_rabbitmq.py  test_provenance_storage_with_path_denormalized.py  test_provenance_storage_without_path.py  test_provenance_storage_without_path_denormalized.py  test_replay.py  test_revision_content_layer.py  test_revision_iterator.py  test_routing_keys.py  test_split_ranges.py  test_utils.py  (+1 more)
swh/provenance/tests/data/: CMDBTS.msgpack  README.md  cmdbts2.msgpack  cmdbts2_repo.yaml  cmdbts2_visits-01.yaml  generate_graph_dataset.py  generate_repo.py  generate_storage_from_git.py  git-bomb.msgpack  graphs_cmdbts2_lower_1.yaml  graphs_cmdbts2_lower_2.yaml  graphs_cmdbts2_upper_1.yaml  graphs_cmdbts2_upper_2.yaml  graphs_out-of-order_lower_1.yaml  history_graphs_with-merges_visits-01.yaml  origin-revision_with-merges_visits-01.txt  origins.csv  out-of-order.msgpack  out-of-order_repo.yaml  repo_with_merges-visits-01.yaml  repo_with_merges.yaml  synthetic_cmdbts2_lower_1.txt  synthetic_cmdbts2_lower_2.txt  synthetic_cmdbts2_upper_1.txt  synthetic_cmdbts2_upper_2.txt  synthetic_lower_1.txt  synthetic_lower_2.txt  synthetic_noroot_lower.txt  synthetic_out-of-order_lower_1.txt  synthetic_upper_1.txt  synthetic_upper_2.txt  with-merges.msgpack  with-merges_repo.yaml
swh/provenance/tests/data/swhgraph/cmdbts2/compressed/: example-labelled.labelobl  example-labelled.labeloffsets  example-labelled.labels  example-labelled.properties  example-transposed-labelled.labelobl  example-transposed-labelled.labeloffsets  example-transposed-labelled.labels  example-transposed-labelled.properties  example-transposed.graph  example-transposed.obl  example-transposed.offsets  (+21 more)
swh/provenance/tools/: compare-all.py  compare-first.py  count.py  dump.py  find-blob.py  histogram.py  metrics.py  revisions_format.py  revisions_pick.py  revisions_sort.py
swh/provenance/tools/origins/: client.py  server.py
swh/provenance/tools/revisions/: client.py  server.py
(+127 files in other folders)
