[package]
name = "swh-provenance-db-build"
description = "Reads a swh-graph dataset, and produces a Parquet database suitable for efficient provenance queries"
repository.workspace = true
version.workspace = true
edition = "2021"
license.workspace = true
keywords = ["software-heritage", "graph", "provenance", "grpc"]
categories = ["compression", "science"]
rust-version = "1.82"

[dependencies]
ar_row = "1.1.0"
ar_row_derive = "1.1.0"
arrow = { version = "53.1.0", default-features = false }
anyhow = {version="1.0.71", features=["backtrace"]}
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc"] }
byteorder = "1.4.3"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.1.6", features = ["derive"] }
csv = "1.3.0"
dashmap = "6.1.0"
dataset-writer.workspace = true
dsi-progress-logger = "0.8.0"
log = "0.4.17"
mimalloc = { version = "0.1", default-features = false }
parquet = { version = "53.1.0", default-features = false, features = ["arrow", "zstd"] }
rayon = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.14"
env_logger = "0.11.5"
sux = "0.7.2"
rdst = { version  ="0.20.14" }
swh-graph = { workspace = true, features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[[bin]]
name = "find-earliest-revision"
