[package]
name = "swh-provenance"
version.workspace = true
readme = "README.md"
edition = "2021"
description = "gRPC service to efficiently find the first revisions/releases/origins to contain a given content/directory"
repository = "https://gitlab.softwareheritage.org/swh/devel/swh-provenance"
license = "GPL-3.0-or-later"
keywords = ["software-heritage", "graph", "provenance", "grpc"]
categories = ["compression", "science"]
rust-version = "1.79"

[dependencies]
anyhow = { version="1.0.79", features=["backtrace"] }
base64-simd = "0.8.0"
crossbeam-queue = "0.3.11"
dashmap = "6.1.0"
itertools = "0.13.0"
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.16.0"
rdst = { version = "0.20.14", features = ["multi-threaded"] }
swh-graph = "6.0.0"

# CLI & logging
cadence = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
dsi-progress-logger = "0.2.4"
log = "0.4.17"
sentry = { version = "0.32.1", features = ["anyhow", "tower", "tracing"], optional = true }
sentry-tracing = "0.32.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Database
async-trait = "0.1.73"
bytes = "1.7.1"
arrow = "53.1.0"
object_store = { version = "0.11.0", default-features = false }
parquet = { version = "53.1.0", default-features = false, features = ["arrow", "async", "object_store", "zstd"]}
url = "2.2"
parquet_aramid = { git = "https://gitlab.softwareheritage.org/swh/devel/parquet_aramid-rs.git", rev = "1abdcbc0a5fc33c7a794f1cadc884e00b0a74bf5", features = ["rayon"] }

# Elias-Fano index
epserde = "0.6.1"
sux = "0.4.1"

# gRPC
prost = "0.13"
prost-types = "0.13"
tonic = "0.12.2"
tonic-health = "0.12.2"
tonic-reflection = "0.12.2"
tonic-middleware = "0.2.1"
http-body = "1"  # must match the version used by tonic

# serde
serde_json = "1.0"
serde = "1.0.189"
serde_derive = "1.0.189"

# Tokio & async
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
futures = "0.3.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11.0"

[features]
default = ["sentry", "grpc-server"]
grpc-server = []

[[bin]]
name = "swh-provenance-index"
path = "src/bin/index.rs"

[[bin]]
name = "swh-provenance-grpc-serve"
path = "src/bin/grpc-serve.rs"
